--- a/Oberfläche/src/AirSwimmer/bin/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/bin/AndroidManifest.xml
@@ -3,8 +3,10 @@
     package="de.example.airswimmer"
     android:versionCode="1"
     android:versionName="1.0" >
-    <supports-screens android:anyDensity="true"
-        android:largeScreens="true" 
+
+    <supports-screens
+        android:anyDensity="true"
+        android:largeScreens="true"
         android:smallScreens="true" />
 
     <uses-sdk
@@ -17,13 +19,17 @@
         android:label="@string/app_name"
         android:theme="@style/AppTheme" >
         <activity
-            android:name="de.example.airswimmer.StartActivity"
+            android:name="FrontPage"
             android:label="@string/app_name" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+        </activity>
+        <activity
+            android:name="de.example.airswimmer.Activity_Tasten"
+            android:label="@string/title_activity_activity__tasten" >
         </activity>
     </application>
 
