Oberfläche mit Images für normale Tastatur aus anderem Projekt hinzugefügt Menü zum Wechseln der Oberfläche und Ändern der Hintergrundfarbe hinzugefügt Fehlermeldung bei Betätigen der Zurück-Taste beim Kippen beseitigt

--- a/Oberfläche/src/AirSwimmer/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/AndroidManifest.xml
@@ -33,9 +33,9 @@
         </activity>
         <activity
             android:name="de.example.airswimmer.Activity_Kippen"
-            android:label="@string/title_activity_activity__kippen" >
+            android:label="@string/title_activity_activity__kippen" android:screenOrientation="landscape">
         </activity>
-        <activity android:name="MoveShark"></activity>
+        <activity android:name="MoveShark" android:screenOrientation="landscape"></activity>
     </application>
 
 </manifest>
