--- a/Oberfläche/src/AirSwimmerWipe/bin/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmerWipe/bin/AndroidManifest.xml
@@ -7,6 +7,12 @@
     <uses-sdk
         android:minSdkVersion="8"
         android:targetSdkVersion="17" />
+    
+    <supports-screens
+		android:largeScreens="true"
+		android:normalScreens="true"
+		android:smallScreens="true"
+		android:anyDensity="true" />
 
     <application
         android:allowBackup="true"
