--- a/TeamIR_Sender/TestLirc/.project
+++ b/TeamIR_Sender/TestLirc/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestLirc</name>
+	<name>TestLircTV</name>
 	<comment></comment>
 	<projects>
 	</projects>
