--- a/Oberfläche/src/AirSwimmer/bin/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/bin/AndroidManifest.xml
@@ -38,6 +38,7 @@
         <activity android:name="de.airswimmer.gui.Activity_Wipe"
             	  android:label="@string/title_activity_activity__wipe" android:screenOrientation="landscape">
         </activity>
+        <activity android:name="de.airswimmer.gui.Activity_Buttons_Permanent"></activity>
     </application>
 
 </manifest>
