--- a/Oberfläche/src/AirSwimmer/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/AndroidManifest.xml
@@ -34,11 +34,11 @@
             android:name="de.airswimmer.gui.Activity_Tilt"
             android:label="@string/title_activity_activity__tilt" android:screenOrientation="landscape">
         </activity>
-        <activity android:name="de.airswimmer.gui.Activity_Wipe_OneMove"
+        <activity android:name="de.airswimmer.gui.Activity_Wipe"
             	  android:label="@string/title_activity_activity__wipe" android:screenOrientation="landscape">
         </activity>
         <activity android:name="de.airswimmer.gui.Activity_Buttons_Permanent"></activity>
-        <activity android:name="de.airswimmer.gui.Activity_Wipe_PermanentMove" 
+        <activity android:name="de.airswimmer.gui.Activity_Wipe_Permanent" 
             	  android:label="@string/title_activity_activity__wipe_permanent" android:screenOrientation="landscape"></activity>
     </application>
 
