--- a/Oberfläche/src/AirSwimmer/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/AndroidManifest.xml
@@ -53,6 +53,7 @@
         </activity>
         <activity android:name="de.airswimmer.gui.Start_button_tilt" >
         </activity>
+        <activity android:name="de.airswimmer.gui.Start_button_tilt_Permanent"></activity>
     </application>
 
 </manifest>
