--- a/Oberfläche/src/AirSwimmer/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/AndroidManifest.xml
@@ -54,6 +54,7 @@
         <activity android:name="de.airswimmer.gui.Start_button_tilt" >
         </activity>
         <activity android:name="de.airswimmer.gui.Start_button_tilt_Permanent"></activity>
+        <activity android:name="de.airswimmer.gui.Activity_Tilt_Permanent"></activity>
     </application>
 
 </manifest>
