Änderung des Appsnamens in LircFish_Threads

--- a/TeamIR_Sender/LircFish_Threads/.project
+++ b/TeamIR_Sender/LircFish_Threads/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>TestLircFish_Threads</name>
+	<name>LircFish_Threads</name>
 	<comment></comment>
 	<projects>
 	</projects>
