Start_button_tilt_Permanent in Manifest eingetragen Wechsel zwischen permanenter und einfacher Steuerung bereits auf Startseite der Tiltsteuerungen über Menü ermöglicht zurück zu start button bei Berührung des Bildschirms für beide Tilt-Steuerungen alten Code entfernt

--- a/Oberfläche/src/AirSwimmer/AndroidManifest.xml
+++ b/Oberfläche/src/AirSwimmer/AndroidManifest.xml
@@ -63,6 +63,7 @@
             android:label="Kippsteuerung"
             android:screenOrientation="landscape" >
         </activity>
+        <activity android:name="de.airswimmer.gui.Start_button_tilt_Permanent"></activity>
     </application>
 
 </manifest>
