--- a/finaleApp/AirSwimmer/bin/AndroidManifest.xml
+++ b/finaleApp/AirSwimmer/bin/AndroidManifest.xml
@@ -64,6 +64,7 @@
             android:screenOrientation="landscape" >
         </activity>
         <activity android:name="de.airswimmer.gui.Start_button_tilt_Permanent"></activity>
+        <activity android:name="info_page"></activity>
     </application>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
