--- a/finaleApp/AirSwimmer/AndroidManifest.xml
+++ b/finaleApp/AirSwimmer/AndroidManifest.xml
@@ -65,6 +65,7 @@
         </activity>
         <activity android:name="de.airswimmer.gui.Start_button_tilt_Permanent"></activity>
         <activity android:name="info_page"></activity>
+        <activity android:name="de.airswimmer.gui.SetSoundActivity"></activity>
     </application>
 	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
 </manifest>
